<resources>
    <string name="app_name">ControleDeAlunos</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_logon">LogonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_button_habilitar">NA</string>
    <string name="txt_button_extrato">Extrato</string>
    <string name="txt_button_deletar">Deletar</string>
    <string name="txt_pesquisar">Pesquisar Alunos</string>
    <string name="txt_alunos_pesquisar">Pesquisar Alunos</string>
    <string name="bt_adicionar_aluno">Adicionar Aluno</string>
    <string name="bt_adicionar_adm">Adicionar ADM</string>
    <string name="txt_cadstrar_alunos">Cadastrar</string>
    <string name="txt_ativar">Ativar e Desativar aluno</string>
    <string name="txt_pagar">Parar</string>
    <string name="tb_hint">Nome</string>
    <string name="bt_nova_pesquisa">Nova Pesquisa</string>
    <string name="bt_add_adm">Adicionar Administrador</string>
    <string name="bt_logout">logout</string>

    <string name="tx_logradouro_detalhe">Logradouro</string>
    <string name="tx_numero_detalhe">numero</string>
    <string name="tx_cep_detalhe">cep</string>
    <string name="tx_complemento_detalhe">complemento</string>
    <string name="tv_detalhe_endereco">Endereco</string>
    <string name="tv_numero_cartao">Numero do Cartão</string>
    <string name="tv_novo_aluno">Novo Aluno</string>
    <string name="bt_add_aluno">Adicionar Aluno</string>

    <string name="tx_lista_alunos">Lista de Alunos</string>
    <string name="item_id_aluno">1</string>
    <string name="item_nome_aluno">Teste</string>

</resources>
