<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.alunos.DetalhesActivity">

    <Button
        android:id="@+id/bt_logout_detalhes"
        android:layout_width="82dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_gray_button"
        android:text="@string/bt_logout"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/tx_detalhes_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_habilitar"
        android:layout_width="126dp"
        android:layout_height="117dp"
        android:layout_margin="@dimen/main_button_margin"
        android:background="@drawable/round_button"
        android:text="@string/txt_button_habilitar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_detalhes_nome"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/bt_deletar"
        android:layout_width="126dp"
        android:layout_height="117dp"
        android:layout_margin="@dimen/main_button_margin"
        android:background="@drawable/round_button"
        android:text="@string/txt_button_deletar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/bt_habilitar"
        app:layout_constraintTop_toBottomOf="@+id/tx_detalhes_nome"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/tx_detalhes_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fulado da Silva Salro"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_logout_detalhes"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TableLayout
        android:id="@+id/tl_detalhes"
        android:layout_width="365dp"
        android:layout_height="99dp"
        android:layout_marginBottom="200dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_detalhe_endereco">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/tx_logradouro_detalhe" />

            <TextView
                android:id="@+id/tv_detalhe_logradouro"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/tx_numero_detalhe" />

            <TextView
                android:id="@+id/tv_detalhe_numero"
                android:layout_height="match_parent"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/tx_complemento_detalhe" />

            <TextView
                android:id="@+id/tv_detalhe_complemento"
                android:layout_height="match_parent"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/tx_cep_detalhe" />

            <TextView
                android:id="@+id/tv_detalhe_cep"
                android:layout_height="match_parent"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tx_detalhe_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/tv_detalhe_endereco"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_habilitar" />

</androidx.constraintlayout.widget.ConstraintLayout>